--- a/package.json
+++ b/package.json
@@ -97,7 +97,8 @@
     "terser-webpack-plugin": "^1.1.0",
     "webpack": "^4.26.0",
     "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.10"
+    "webpack-dev-server": "^3.1.10",
+    "lodash.template": ">=4.5.0"
   },
   "dependencies": {}
 }
